Fixes a bug where the footer is not sticking to the bottom of the page (after posts) on Chrome; still an issue on Firefox and Edge. Also refactors CSS styling from pixels to rem for alignment and spacing.

--- a/app/static/stylesheet.css
+++ b/app/static/stylesheet.css
@@ -2,27 +2,24 @@
 @import url("https://fonts.googleapis.com/css?family=Rubik+Mono+One");
 
 /* My styling. */
-h1 {
-    font-family: "Rubik Mono One", sans-serif;
-    font-size: 42px;
-}
-
 html {
-    font-size: 62.5%
+    font-size: 62.5%;
+    height: 100%;
 }
 
 body {
     font-family: "Rubik", sans-serif;
     background-color: #ecf0f1;
     margin: 0;
+    padding: 0;
     min-height: 100%;
     position: relative;
 }
 
 /* Header and navigation bar styling. */
 .navbar {
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
     overflow: hidden;
     background-color: #3498db;
     position: fixed;
@@ -36,9 +33,9 @@ body {
     display: block;
     color: #ffffff;
     text-align: center;
-    padding: 20px 20px;
+    padding: 2rem 2rem;
     text-decoration: none;
-    font-size: 16px;
+    font-size: 1.6rem;
     -webkit-transition-duration: 0.5s;
     transition-duration: 0.5s;
 }
@@ -61,31 +58,40 @@ body {
 
 /* Title, subtitle, and horizontal line. */
 .title {
-    margin-top: 90px;
+    margin-top: 9rem;
     text-align: center;
-    line-height: 16px;
+    line-height: 1.6rem;
+}
+
+.title-text {
+    font-family: "Rubik Mono One", sans-serif;
+    font-size: 4rem;
+}
+
+.subtitle-text {
+    font-size: 2.4rem;
 }
 
 .hr {
     border-style: solid;
-    border-width: 0.5px;
+    border-width: 0.05rem;
     border-color: #7f8c8d;
     width: 56rem;
 }
 
 /* Buttons, post text area, name input, and body styling. */
 .content {
-    padding: 0px;
-    padding-bottom: 120px;
+    min-height: 100%;
+    height: 100%;
 }
 
 .btn {
     font-family: "Rubik", sans-serif;
-    font-size: 14px;
+    font-size: 1.4rem;
     color: white;
     background-color: #3498db;
-    padding: 10px;
-    border-radius: 4px;
+    padding: 1rem;
+    border-radius: 0.4rem;
     border: none;
     -webkit-transition-duration: 0.5s;
     transition-duration: 0.5s;
@@ -98,27 +104,27 @@ body {
 
 .post-textarea, .name-input {
     font-family: "Rubik", sans-serif;
-    font-size: 14px;
-    padding: 10px;
-    border-radius: 4px;
-    border-width: 1px;
+    font-size: 1.4rem;
+    padding: 1rem;
+    border-radius: 0.4rem;
+    border-width: 0.1rem;
     border-style: solid;
     border-color: #7f8c8d;
 }
 
 .posts {
-    margin: 20px;
+    margin: 2rem 2rem 14rem 2rem;
 }
 
 /* Footer styling. */
 .footer {
-    height: 120px;
-    line-height: 10px;
-    padding: 0;
-    margin: 0;
+    height: 12rem;
+    line-height: 1rem;
     overflow: hidden;
     background-color: #3498db;
     width: 100%;
+    padding: 0;
+    margin: 0;
     position: absolute;
     left: 0;
     right: 0;
@@ -127,32 +133,34 @@ body {
 
 .footer-item {
     display: block;
-    margin-top: 30px;
+    margin-top: 3rem;
     color: #ffffff;
     text-align: center;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 2rem;
 }
 
 .footer-item a {
     text-decoration: none;
     color: #ffffff;
+    -webkit-transition-duration: 0.5s;
+    transition-duration: 0.5s;
 }
 
 .footer-item a:hover {
-    text-decoration: underline;
+    color: #2980b9;
 }
 
 .social-icon-list {
     list-style-type: none;
     text-align: center;
-    margin-right: 35px;
+    margin-right: 3.5rem;
 }
 
 .social-icon {
-    font-size: 30px;
+    font-size: 3rem;
     display: inline;
-    margin: 0 10px 0 10px;
+    margin: 0 1rem 0 1rem;
     text-decoration: none;
 }
 
@@ -163,35 +171,36 @@ body {
 }
 
 .white-icon:hover {
-    color: #bbbbbb;
+    color: #2980b9;
 }
 
 /* post_box class styling */
 .post_box {
     background: #fff;
-    padding: 12px 0px 0px 12px;
-    margin-top: 0px;
-    margin-bottom: 8px;
-    border: 1px solid #7f8c8d;
+    padding: 1.2rem 0 0 1.2rem;
+    margin-top: 0;
+    margin-bottom: 0.8rem;
+    border: 0.1rem solid #7f8c8d;
 }
 
 .post_box-header {
-    padding-bottom: 12px;
+    padding-bottom: 1.2rem;
+    font-size: 1.4rem;
 }
 
 .post_box-avatar {
-    width: 38px;
-    height: 38px;
+    width: 3.8rem;
+    height: 3.8rem;
     border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
     color: white;
-    font-size: 22px;
+    font-size: 2.2rem;
     float: left;
-    margin-right: 16px;
-    border: 1px solid #fff;
-    box-shadow: 0px 0px 0px 2px #f00;
+    margin-right: 1.6rem;
+    border: 0.1rem solid #fff;
+    box-shadow: 0 0 0 0.2rem #f00;
 }
 
 .post_box-avatar::after {
@@ -208,8 +217,9 @@ body {
 }
 
 .post_box-body {
-    margin-top: 16px;
-    margin-bottom: 8px;
+    margin-top: 1.6rem;
+    margin-bottom: 0.8rem;
+    font-size: 1.4rem;
 }
 
 .post_box-options {
@@ -220,11 +230,11 @@ body {
     background: #f8f8f8;
     border: none;
     color: #2c3e50;
-    padding: 7px;
+    padding: 0.7rem;
     cursor: pointer;
-    font-size: 14px;
-    margin-left: 2px;
-    margin-right: 2px;
+    font-size: 1.4rem;
+    margin-left: 0.2rem;
+    margin-right: 0.2rem;
     outline: none;
-    height: 42px;
+    height: 4.2rem;
 }
